# hdl-modules

./: .gitignore  Makefile  pyproject.toml
hdl_modules/: __init__.py
modules/axi/: module_axi.py
modules/axi/src/: axi_address_fifo.vhd  axi_b_fifo.vhd  axi_lite_cdc.vhd  axi_lite_mux.vhd  axi_lite_pipeline.vhd  axi_lite_pkg.vhd  axi_lite_simple_crossbar.vhd  axi_lite_simple_read_crossbar.vhd  axi_lite_simple_write_crossbar.vhd  axi_lite_to_vec.vhd  axi_pkg.vhd  axi_r_fifo.vhd  axi_read_cdc.vhd  axi_read_throttle.vhd  axi_simple_read_crossbar.vhd  axi_simple_write_crossbar.vhd  axi_stream_fifo.vhd  axi_stream_pkg.vhd  axi_to_axi_lite.vhd  axi_to_axi_lite_vec.vhd  axi_w_fifo.vhd  axi_wdata_width_conversion.vhd  axi_write_cdc.vhd  axi_write_throttle.vhd
modules/axi/test/: tb_axi_cdc.vhd  tb_axi_fifo.vhd  tb_axi_lite_cdc.vhd  tb_axi_lite_mux.vhd  tb_axi_lite_pipeline.vhd  tb_axi_simple_crossbar.vhd  tb_axi_stream_fifo.vhd  tb_axi_to_axi_lite.vhd  tb_axi_to_axi_lite_bus_error.vhd  tb_axi_to_axi_lite_vec.vhd
modules/axi_lite/src/: axi_lite_pkg.vhd  axi_lite_simple_crossbar.vhd
modules/bfm/sim/: axi_master.vhd  axi_slave.vhd  axi_write_slave.vhd
modules/bfm/test/: tb_handshake_bfm.vhd
modules/common/: module_common.py
modules/common/src/: addr_pkg.vhd  debounce.vhd  handshake_pipeline.vhd  handshake_splitter.vhd  width_conversion.vhd
modules/extras/: module_extras.py
modules/extras_2008/: module_extras_2008.py
modules/fifo/: module_fifo.py
modules/reg_file/: module_reg_file.py
modules/resync/: module_resync.py
modules/utils/: module_utils.py
(+40 files in other folders)
