[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hdl_modules"
version = "0.0.1+ultrasat.1.0.0"
dependencies = []

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {include = ["hdl_modules*"]}

[tool.setuptools.package-data]
"*" = ["*.vhd", "*.tcl"]


[tool.black]
line-length = 100


[tool.isort]
# Make base formatting compatible with black settings
profile = "black"
line_length = 100

# Add comments before each import group
import_heading_future = "Future libraries"
import_heading_stdlib = "Standard libraries"
import_heading_tools_pythonpath = """\
Import before others since it modifies PYTHONPATH. pylint: disable=unused-import"""
import_heading_firstparty = "First party libraries"
import_heading_thirdparty = "Third party libraries"
import_heading_localfolder = "Local folder libraries"

# Change order so that "tools_pythonpath" Python module, which is a "first party" import,
# is placed before "third party" imports.
# This is since that import updates PYTHONPATH, which is needed to find e.g. VUnit which is a
# third party import.
known_tools_pythonpath = "tools.tools_pythonpath"
sections = "FUTURE,STDLIB,TOOLS_PYTHONPATH,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"


[tool.mypy]
strict = true
